<resources>
    <string name="app_name">Quietness</string>
    <string name="default_web_client_id">952596588562-kmpn07dd9m1cv5fufku1cjvl5bo96ff3.apps.googleusercontent.com</string>
    <string name="inicia_sesion"><u>Inicia sesión</u></string>
    <string name="title_activity_menu">menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Q1">Si pudieras escoger cualquier lugar, Donde te gustaria vivir?</string>
    <string name="Q11">Playa</string>
    <string name="Q12">Bosque</string>
    <string name="Q13">Montana</string>
    <string name="Q14">Ciudad</string>
    <string name="Q2">Con quien te siente mejor?</string>
    <string name="Q21">Familia</string>
    <string name="Q22">Amigos</string>
    <string name="Q23">Mascota</string>
    <string name="Q24">Pareja</string>
    <string name="Q3">Con que animal te identificas mas?</string>
    <string name="Q31">Leon</string>
    <string name="Q32">Aguila</string>
    <string name="Q33">Lobo</string>
    <string name="Q34">Tiburon</string>
    <string name="Q35">Mono</string>
    <string name="Q4">Que actividad prefieres?</string>
    <string name="Q41">Leer</string>
    <string name="Q42">Audio-visuales</string>
    <string name="Q43">Deporte</string>
    <string name="Q44">Fiesta</string>
    <string name="Load">Load</string>
    <string name="TitleEncuesta">Encuesta</string>
    <string name="temp">...</string>
    <string name="Music">Music</string>
    <string name="Sleep">Sleep</string>
    <string name="Calendar">Calendar</string>
    <string name="History">Stories</string>
    <string name="app_name_menu">Menu Quietness</string>
    <string name="back">Back</string>
    <string name="about">About Us</string>
    <string name="save">Save</string>
    <string name="TermOfservice">POLÍTICA DE PRIVACIDAD</string>
    <string name="first_paragraph">
        La presente Política de Privacidad establece los términos en que QUIETNESS APP usa y protege la
        información que es proporcionada por sus usuarios al momento de utilizar su aplicación móvil. Este
        proyecto está comprometido con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar
        los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando
        que sólo se emplea de acuerdo con los términos de este documento. Sin embargo, esta Política de
        Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos
        revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.
    </string>
    <string name="subtitle_1">Información que es recogida</string>
    <string name="second_paragraph">
        Nuestra aplicación móvil podrá recoger información personal, por ejemplo: Nombre, apellido, usuario,
        género, información de contacto como su dirección de correo electrónico y contraseña para su
        registro directo con la aplicación.
    </string>
    <string name="subtitle_2">Uso de la información recogida</string>
    <string name="third_paragraph">
        Nuestra aplicación móvil emplea la información con el fin de proporcionar el mejor servicio posible,
        particularmente para mantener un registro de usuarios y mejorar nuestros servicios. Esto con el fin de
        brindar un mejor servicio al usuario y este se sienta cómodo y protegido con la aplicación.
    </string>
    <string name="fourth_paragraph">
        QUIETNESS APP está altamente comprometido para cumplir con el compromiso de mantener su
        información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para
        asegurarnos que no exista ningún acceso no autorizado.
    </string>
    <string name="subtitle_3">Enlaces a terceros</string>
    <string name="fifth_paragraph">
        Esta aplicación móvil puede contener enlaces a otros sitios que pueden ser de su interés. Una vez
        que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio al
        que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la
        protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias
        políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está
        de acuerdo con estas.
    </string>
    <string name="subtitle_4">Control de su información personal</string>
    <string name="sixth_paragraph">
        En cualquier momento usted puede restringir la recopilación o el uso de la información personal que
        es proporcionada a nuestra aplicación móvil.
    </string>
    <string name="seventh_paragraph">
        Este proyecto no venderá, cederá ni distribuirá la información personal que es recopilada sin su
        consentimiento, salvo que sea requerido por un juez con una orden judicial.
    </string>
    <string name="eighth_paragraph">
        QUIETNESS APP se reserva el derecho de cambiar los términos de la presente Política de
        Privacidad en cualquier momento.
    </string>

    <string name="settings">Configuración</string>

    <string name="registro_manual">Agregar registro manualmente</string>
    <string name="registro_alarma">Iniciar alarma de sueño</string>
    <string name="time_selected_is">La hora seleccionada es:</string>
    <string name="change_time">Cambia la hora</string>
    <string name="time_selected_is_ini">La hora inicial es:</string>
    <string name="time_selected_is_fin">La hora final es:</string>
    <string name="inicial_time">Cambia la hora inicial</string>
    <string name="final_time">Cambia la hora final</string>
    <string name="changed_to">Hora inicial cambiada a las %s</string>
    <string name="changed_to_f">Hora final cambiada a las %s</string>
    <string name="sleep_total">Dormiste %s horas y %s minutos.</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="volver">VOLVER</string>
    <string name="new_notification">Nueva notificación</string>
    <string name="estadistica">Estadística mensual</string>
    <string name="grafica">Grafica semanal</string>
    <string name="Tool_Bar_Text">Quietness</string>


    <string name="tv1">Entrenamiento de habilidades de estudio</string>
    <string name="Boton2">anterior</string>
    <string name="Boton1">Consejos para afrontar un parcial</string>
    <string name="Boton3">Consejos para afrontar una exposición</string>
    <string name="Boton4">Consejos para afrontar un proyecto</string>

    <string name="tv2">Consejos para afrontar un parcial</string>
    <string name="par1">1. Estudiar con varios días de anticipació. </string>
    <string name="par2">2. Dormir lo suficiente la noche anterior de presentar el parcial. </string>
    <string name="par3">3. Meditar antes del parcial. </string>
    <string name="par4">4. Empezar a repasar por los temas que más te generen dificultad.</string>

    <string name="tv3">Consejos para afrontar una exposición</string>
    <string name="exp1">1. Haz un esquema de la exposición (Por ejemplo Fractales).</string>
    <string name="exp2">2. Realiza pausas y habla con naturalidad.</string>
    <string name="exp3">3. Practica exponiendo a otras personas o frente al espejo.</string>

    <string name="tv4">Consejos para afrontar una proyecto</string>
    <string name="pro1">1. Divide el proyecto en fases y visualízalo en conjunto.</string>
    <string name="pro2">2. Haz un seguimiento diario y semanal.</string>
    <string name="pro3">3. Reuniones efectivas por encima de todo.</string>
    <string name="pro4">4. Ten un plan B ante cualquier imprevisto.</string>
    <string name="menu">Menu</string>

    <string name ="about_us1">
        Retoma la tranquilidad que necesitas, al alcance de tu mano.
        Alivia las cargas producidas por la ansiedad de forma dinámica y efectiva.
        Preservar una buena salud mental es importante, nosotros te enseñamos cómo hacerlo. </string>

    <string name ="about_us2">
        “Es  difícil encontrar la felicidad dentro de  uno mismo, pero es imposible  encontrarla en ningún otro  lugar"</string>


    <string name ="about_usref">
        -A Schopenhauer </string>

    <string name ="about_us3">
        Quietness es una aplicación móvil que ayuda a controlar los altos niveles de ansiedad
        en estudiantes universitarios de primero a cuarto semestre en la ciudad de Bogotá,
        debido a que estos reducen la eficiencia en el aprendizaje, disminuyendo la atención, la concentración y la retención de información,
        con el consecuente deterioro en el rendimiento académico.  </string>

    <string name ="about_us4">
        Esta aplicación móvil le permita lidiar con los síntomas y episodios de ansiedad.
        Será capaz de elaborar un monólogo ambientado con música que relacione con tranquilidad,
        para que, de esta manera, cree una zona de confort de experiencia personalizada,
        que se encargará de recordarle lo que estableció previamente (de manera creativa e independiente)
        como situaciones, ambientes, recuerdos y personas que benefician su vida, brindando comodidad y calma a su mente.
        Por otro lado, la aplicación implementará más herramientas de control de ansiedad,
        tales como control de horas de sueño, para llevar un registro cronológico de sus hábitos de descanso,
        calendario de ansiedad, que permitirá al usuario establecer aquellas actividades que produzcan un
        desequilibrio emocional prematuro y de este modo llevar procedimientos de control de ansiedad con anticipación,
        así como el entrenamiento de habilidades de estudio donde encontrará consejos, experiencias,
        métodos de estudio o sencillamente comportamientos sanos a la hora de lidiar con la ansiedad mientras estudia. </string>


</resources>