<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".toolbar_items.Politicas">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/back_btn_politicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="180dp"
                android:layout_height="69dp"
                android:layout_gravity="center"
                android:text="@string/TermOfservice"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="26sp" />



            <TextView
                android:layout_width="291dp"
                android:layout_height="381dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="16dp"
                android:text="@string/first_paragraph"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="69dp"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="25dp"
                android:text="@string/subtitle_1"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:layout_width="291dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/second_paragraph"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="69dp"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="25dp"
                android:text="@string/subtitle_2"
                android:textColor="#000000"
                android:textSize="17sp" />
            <TextView
                android:layout_width="291dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/third_paragraph"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />

            <TextView
                android:layout_width="291dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/fourth_paragraph"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="69dp"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="25dp"
                android:text="@string/subtitle_3"
                android:textColor="#000000"
                android:textSize="17sp" />
            <TextView
                android:layout_width="291dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/fifth_paragraph"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="69dp"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="25dp"
                android:text="@string/subtitle_4"
                android:textColor="#000000"
                android:textSize="17sp" />
            <TextView
                android:layout_width="291dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/sixth_paragraph"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />
            <TextView
                android:layout_width="291dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/seventh_paragraph"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />
            <TextView
                android:id="@+id/tv_description8"
                android:layout_width="291dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/eighth_paragraph"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>